--- a/videos.html
+++ b/videos.html
@@ -44,7 +44,7 @@
         }
 
         .video-card {
-            flex: 0 0 400px;
+            flex: 0 0 600px;
             background: #fff;
             border-radius: 16px;
             overflow: hidden;
@@ -61,12 +61,64 @@
             position: relative;
             aspect-ratio: 16/9;
             background: #000;
+            cursor: pointer;
+        }
+
+        .video-thumbnail img.poster-image {
+            width: 100%;
+            height: 100%;
+            object-fit: cover;
         }
 
         .video-thumbnail video {
             width: 100%;
             height: 100%;
             object-fit: cover;
+            display: none;
+        }
+
+        .video-thumbnail.playing video {
+            display: block;
+        }
+
+        .video-thumbnail.playing img.poster-image,
+        .video-thumbnail.playing .play-overlay {
+            display: none;
+        }
+
+        .play-overlay {
+            position: absolute;
+            top: 0;
+            left: 0;
+            right: 0;
+            bottom: 0;
+            display: flex;
+            align-items: center;
+            justify-content: center;
+            background: rgba(0, 0, 0, 0.3);
+            transition: all 0.3s;
+        }
+
+        .play-overlay:hover {
+            background: rgba(0, 0, 0, 0.5);
+        }
+
+        .play-btn {
+            width: 80px;
+            height: 80px;
+            background: var(--primary-color);
+            border-radius: 50%;
+            display: flex;
+            align-items: center;
+            justify-content: center;
+            color: #fff;
+            font-size: 2rem;
+            transition: all 0.3s;
+            box-shadow: 0 10px 30px rgba(0, 0, 0, 0.3);
+        }
+
+        .play-overlay:hover .play-btn {
+            transform: scale(1.1);
         }
 
         .quality-badge {
@@ -168,9 +220,21 @@
             left: 10px;
         }
 
+        @media (max-width: 991px) {
+            .video-card {
+                flex: 0 0 500px;
+            }
+        }
+
         @media (max-width: 768px) {
             .video-card {
-                flex: 0 0 300px;
+                flex: 0 0 320px;
+            }
+
+            .play-btn {
+                width: 60px;
+                height: 60px;
+                font-size: 1.5rem;
             }
         }
     </style>
@@ -229,10 +293,9 @@
             return '720p';
         }
 
-        // Scroll carousel
         function scrollCarousel(direction) {
             const carousel = document.getElementById('video-carousel');
-            const scrollAmount = 420; // card width + gap
+            const scrollAmount = 620; // card width + gap
             carousel.scrollBy({ left: direction * scrollAmount, behavior: 'smooth' });
         }
 
@@ -259,8 +322,14 @@
 
                     return `
                     <div class="video-card">
-                        <div class="video-thumbnail">
-                            <video id="video-${index}" controls preload="none" poster="${v.poster}">
+                        <div class="video-thumbnail" id="thumb-${index}" onclick="playVideo(${index})">
+                            <img src="${v.poster}" alt="${title}" class="poster-image">
+                            <div class="play-overlay">
+                                <div class="play-btn">
+                                    <i class="fas fa-play"></i>
+                                </div>
+                            </div>
+                            <video id="video-${index}" controls preload="none">
                                 <source src="${videoSrc}" type="video/mp4">
                             </video>
                             <span class="quality-badge" id="quality-badge-${index}">${optimalQuality}</span>
@@ -303,6 +372,16 @@
                 badge.textContent = quality;
                 if (isPlaying) video.play();
             }
+        };
+
+        // Play video on thumbnail click
+        window.playVideo = function (index) {
+            const thumb = document.getElementById(`thumb-${index}`);
+            const video = document.getElementById(`video-${index}`);
+
+            // Hide poster and show video
+            thumb.classList.add('playing');
+            video.play();
         };
 
         // Initialize
